# rPython-win

./: DESCRIPTION  INSTALL  NAMESPACE  README.md  cleanup  configure.win
R/: python.assign.R  python.call.R  python.exec.R  python.get.R  python.method.call.R  zzz.R
man/: python.assign.Rd  python.call.Rd
rPython/: NAMESPACE  cleanup  configure  configure.ac
rPython/R/: python.call.R  python.load.R
rPython/inst/: concat.py
rPython/man/: python.assign.Rd  python.exec.Rd  python.load.Rd
rPython/src/: pycall.c
src/: Makevars.in  makevars.win  pycall.c
